--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -57,6 +57,27 @@
             </ul>
           </div>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a data-bs-toggle="collapse" href="#department">
+            <i class="fas fa-book"></i>
+            <p>Department</p>
+            <span class="caret"></span>
+          </a>
+          <div class="collapse" id="department">
+            <ul class="nav nav-collapse">
+              <li routerLinkActive="active">
+                <a [routerLink]="['/department-create']" routerLinkActive="active">
+                  <span class="sub-item">Add Department</span>
+                </a>
+              </li>
+              <li routerLinkActive="active">
+                <a [routerLink]="['/department-list']" routerLinkActive="active">
+                  <span class="sub-item">Department List</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
