--- a/src/app/academy/department/department-list/department-list.component.html
+++ b/src/app/academy/department/department-list/department-list.component.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="card-body">
         <div class="table-responsive">
-          <table class="display table table-striped table-hover" id="add-row">
+          <table class="display table table-striped table-hover" >
             <thead>
             <th class="col-md-1">SL</th>
             <th>Name</th>
