--- a/src/app/academy/student/student-list/student-list.component.html
+++ b/src/app/academy/student/student-list/student-list.component.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="card-body">
         <div class="table-responsive">
-          <table class="display table table-striped table-hover" id="add-row">
+          <table class="display table table-striped table-hover" >
             <thead>
             <tr>
               <th class="col-md-1">SL</th>
