--- a/src/app/admin/user/user-create/user-create.component.html
+++ b/src/app/admin/user/user-create/user-create.component.html
@@ -4,129 +4,88 @@
       <div class="card-header">
         <div class="card-title">Enter User Information</div>
       </div>
-      <form (ngSubmit)="createUser()" [formGroup]="userForm">
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-6">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group" [ngClass]="{'has-error': errors['name']}">
+              <label for="name">Name</label>
+              <input [(ngModel)]="user.name" class="form-control" id="name" type="text" name="name" />
+              <small *ngIf="errors['name']" class="form-text text-danger">{{ errors['name'] }}</small>
+            </div>
 
-              <div [ngClass]="{'has-error': userForm.get('name')?.invalid && userForm.get('name')?.touched}"
-                class="form-group">
-                <label for="name">Name</label>
-                <input class="form-control" formControlName="name" id="name" type="text" />
-                <small *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched"
-                  class="form-text text-danger">
-                  <ng-container *ngIf="userForm.get('name')?.errors?.['required']">Name is required</ng-container>
-                  <ng-container *ngIf="userForm.get('name')?.errors?.['minlength']">Name must be at least 3 characters
-                    long
-                  </ng-container>
-                  <ng-container *ngIf="userForm.get('name')?.errors?.['maxlength']">Name cannot exceed 60 characters
-                  </ng-container>
-                </small>
-              </div>
+            <div class="form-group" [ngClass]="{'has-error': errors['cell']}">
+              <label for="cell">Cell</label>
+              <input [(ngModel)]="user.cell" class="form-control" id="cell" type="text" name="cell" />
+              <small *ngIf="errors['cell']" class="form-text text-danger">{{ errors['cell'] }}</small>
+            </div>
 
-              <div [ngClass]="{'has-error': userForm.get('cell')?.invalid && userForm.get('cell')?.touched}"
-                class="form-group">
-                <label for="cell">Cell</label>
-                <input class="form-control" formControlName="cell" id="cell" type="text" />
-                <small *ngIf="userForm.get('cell')?.invalid && userForm.get('cell')?.touched"
-                  class="form-text text-danger">
-                  <ng-container *ngIf="userForm.get('cell')?.errors?.['required']">Cell is required</ng-container>
-                  <ng-container *ngIf="userForm.get('cell')?.errors?.['minlength']">Cell must be 11 digits long
-                  </ng-container>
-                  <ng-container *ngIf="userForm.get('cell')?.errors?.['maxlength']">Cell must be 11 digits long
-                  </ng-container>
-                </small>
-              </div>
+            <div class="form-group" [ngClass]="{'has-error': errors['email']}">
+              <label for="email">Email</label>
+              <input [(ngModel)]="user.email" class="form-control" id="email" type="text" name="email" />
+              <small *ngIf="errors['email']" class="form-text text-danger">{{ errors['email'] }}</small>
+            </div>
 
-
-              <div [ngClass]="{'has-error': userForm.get('email')?.invalid && userForm.get('email')?.touched}"
-                class="form-group">
-                <label for="email">Email</label>
-                <input class="form-control" formControlName="email" id="email" type="text" />
-                <small *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched"
-                  class="form-text text-danger">
-                  <ng-container *ngIf="userForm.get('email')?.errors?.['required']">Email is required</ng-container>
-                  <ng-container *ngIf="userForm.get('email')?.errors?.['email']">Invalid email format</ng-container>
-                </small>
-              </div>
-
-
-              <div [ngClass]="{'has-error': userForm.get('gender')?.invalid && userForm.get('gender')?.touched}"
-                class="form-group">
-                <label>Gender</label><br />
-                <div class="d-flex">
-                  <div *ngFor="let option of genderOptions" class="form-check">
-                    <input [value]="option.value" class="form-check-input" formControlName="gender"
-                      id="{{ option.value }}" type="radio" />
-                    <label class="form-check-label">
-                      {{ option.label }}
-                    </label>
-                  </div>
+            <div class="form-group" [ngClass]="{'has-error': errors['gender']}">
+              <label>Gender</label><br />
+              <div class="d-flex">
+                <div *ngFor="let option of genderOptions" class="form-check">
+                  <input [(ngModel)]="user.gender" [value]="option.value" class="form-check-input"
+                         id="{{ option.value }}" name="gender" type="radio" />
+                  <label class="form-check-label" for="{{ option.value }}">
+                    {{ option.label }}
+                  </label>
                 </div>
-                <small *ngIf="userForm.get('gender')?.invalid && userForm.get('gender')?.touched"
-                  class="form-text text-danger">
-                  Gender is required
-                </small>
               </div>
-
-
-              <div class="form-group">
-                <label for="dateOfBirth">Date of Birth</label>
-                <input class="form-control" formControlName="dateOfBirth" id="dateOfBirth" type="date" />
-              </div>
-
+              <small *ngIf="errors['gender']" class="form-text text-danger">{{ errors['gender'] }}</small>
             </div>
 
-            <div class="col-md-6">
-
-              <div class="form-group">
-                <label for="avatar">Avatar</label>
-                <br>
-                <input type="file" (change)="onAvatarPicked($event)" formControlName="avatar" class="form-control-file" id="avatar" accept=".png, .jpg, .jpeg">
-              </div>
-
-              <div class="form-group">
-                <label for="joiningDate">Joining Date</label>
-                <input class="form-control" formControlName="joiningDate" id="joiningDate" type="date" />
-              </div>
-
-              <div class="form-group"
-                [ngClass]="{'has-error': userForm.get('status')?.invalid && userForm.get('status')?.touched}">
-                <label for="status">Status</label>
-                <select id="status" class="form-select" formControlName="status">
-                  <option value="" disabled>Select Status</option>
-                  <option *ngFor="let option of statusOptions" [value]="option.value">
-                    {{ option.label }}
-                  </option>
-                </select>
-                <small *ngIf="userForm.get('status')?.invalid && userForm.get('status')?.touched"
-                  class="form-text text-danger">
-                  Status is required
-                </small>
-              </div>
-
-              <div class="form-group">
-                <label for="bloodGroup">Blood Group</label>
-                <select id="bloodGroup" class="form-select" formControlName="bloodGroup">
-                  <option value="" disabled>Select Blood Group</option>
-                  <option *ngFor="let option of bloodGroupOptions" [value]="option.value">
-                    {{ option.label }}
-                  </option>
-                </select>
-              </div>
-
-              <div class="form-group">
-                <label for="address">Address</label>
-                <textarea id="address" class="form-control" formControlName="address" rows="5"></textarea>
-              </div>
-
+            <div class="form-group">
+              <label for="dateOfBirth">Date of Birth</label>
+              <input [(ngModel)]="user.dateOfBirth" class="form-control" id="dateOfBirth" type="date" name="dateOfBirth" />
             </div>
+
+          </div>
+          <div class="col-md-6">
+            <!--<div class="form-group">
+              <label for="avatar">Avatar</label><br />
+              <input type="file" (change)="onAvatarPicked($event)" [(ngModel)]="user.avatar"
+                     class="form-control-file" id="avatar" name="avatar" accept=".png, .jpg, .jpeg" />
+            </div>-->
+
+            <div class="form-group">
+              <label for="joiningDate">Joining Date</label>
+              <input [(ngModel)]="user.joiningDate" class="form-control" id="joiningDate"
+                     type="date" name="joiningDate" />
+            </div>
+
+            <div class="form-group" [ngClass]="{'has-error': errors['status']}">
+              <label for="status">Status</label>
+              <select [(ngModel)]="user.status" id="status" class="form-select" name="status">
+                <option value="" disabled>Select Status</option>
+                <option *ngFor="let option of statusOptions" [value]="option.value">{{ option.label }}</option>
+              </select>
+              <small *ngIf="errors['status']" class="form-text text-danger">{{ errors['status'] }}</small>
+            </div>
+
+            <div class="form-group">
+              <label for="bloodGroup">Blood Group</label>
+              <select [(ngModel)]="user.bloodGroup" id="bloodGroup" class="form-select" name="bloodGroup">
+                <option value="" disabled>Select Blood Group</option>
+                <option *ngFor="let option of bloodGroupOptions" [value]="option.value">{{ option.label }}</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label for="address">Address</label>
+              <textarea [(ngModel)]="user.address" id="address" class="form-control" name="address" rows="5"></textarea>
+            </div>
+
           </div>
         </div>
-        <div class="card-action">
-          <button class="btn btn-success me-2">Save</button>
-        </div>
-      </form>
+      </div>
+      <div class="card-action">
+        <button (click)="createUser()" class="btn btn-success me-2">Save</button>
+      </div>
     </div>
   </div>
 </div>
